// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extractTop should extract top data when data tree has a depth of 2 1`] = `
Array [
  Array [
    Object {
      "parent": null,
      "qElemNo": 0,
      "qSubNodes": Array [
        Object {
          "qElemNo": 0,
          "qSubNodes": Array [
            Object {
              "qElemNo": 0,
              "qSubNodes": Array [],
              "qType": "E",
            },
          ],
          "qType": "E",
        },
      ],
      "qType": "N",
      "x": 0,
      "y": 0,
    },
    Object {
      "parent": null,
      "qElemNo": 1,
      "qSubNodes": Array [
        Object {
          "qElemNo": 0,
          "qSubNodes": Array [
            Object {
              "qElemNo": 0,
              "qSubNodes": Array [],
              "qType": "E",
            },
          ],
          "qType": "E",
        },
      ],
      "qType": "N",
      "x": 1,
      "y": 0,
    },
    Object {
      "parent": null,
      "qElemNo": 2,
      "qSubNodes": Array [
        Object {
          "qElemNo": 0,
          "qSubNodes": Array [
            Object {
              "qElemNo": 0,
              "qSubNodes": Array [],
              "qType": "E",
            },
          ],
          "qType": "N",
        },
        Object {
          "qElemNo": 1,
          "qSubNodes": Array [
            Object {
              "qElemNo": 0,
              "qSubNodes": Array [],
              "qType": "N",
            },
            Object {
              "qElemNo": 1,
              "qSubNodes": Array [],
              "qType": "N",
            },
          ],
          "qType": "N",
        },
      ],
      "qType": "N",
      "x": 2,
      "y": 0,
    },
  ],
  Array [
    Object {
      "parent": Object {
        "parent": null,
        "qElemNo": 0,
        "qSubNodes": Array [
          Object {
            "qElemNo": 0,
            "qSubNodes": Array [
              Object {
                "qElemNo": 0,
                "qSubNodes": Array [],
                "qType": "E",
              },
            ],
            "qType": "E",
          },
        ],
        "qType": "N",
        "x": 0,
        "y": 0,
      },
      "qElemNo": 0,
      "qSubNodes": Array [
        Object {
          "qElemNo": 0,
          "qSubNodes": Array [],
          "qType": "E",
        },
      ],
      "qType": "E",
      "x": 0,
      "y": 1,
    },
    Object {
      "parent": Object {
        "parent": null,
        "qElemNo": 1,
        "qSubNodes": Array [
          Object {
            "qElemNo": 0,
            "qSubNodes": Array [
              Object {
                "qElemNo": 0,
                "qSubNodes": Array [],
                "qType": "E",
              },
            ],
            "qType": "E",
          },
        ],
        "qType": "N",
        "x": 1,
        "y": 0,
      },
      "qElemNo": 0,
      "qSubNodes": Array [
        Object {
          "qElemNo": 0,
          "qSubNodes": Array [],
          "qType": "E",
        },
      ],
      "qType": "E",
      "x": 1,
      "y": 1,
    },
    Object {
      "parent": Object {
        "parent": null,
        "qElemNo": 2,
        "qSubNodes": Array [
          Object {
            "qElemNo": 0,
            "qSubNodes": Array [
              Object {
                "qElemNo": 0,
                "qSubNodes": Array [],
                "qType": "E",
              },
            ],
            "qType": "N",
          },
          Object {
            "qElemNo": 1,
            "qSubNodes": Array [
              Object {
                "qElemNo": 0,
                "qSubNodes": Array [],
                "qType": "N",
              },
              Object {
                "qElemNo": 1,
                "qSubNodes": Array [],
                "qType": "N",
              },
            ],
            "qType": "N",
          },
        ],
        "qType": "N",
        "x": 2,
        "y": 0,
      },
      "qElemNo": 0,
      "qSubNodes": Array [
        Object {
          "qElemNo": 0,
          "qSubNodes": Array [],
          "qType": "E",
        },
      ],
      "qType": "N",
      "x": 2,
      "y": 1,
    },
    Object {
      "parent": Object {
        "parent": null,
        "qElemNo": 2,
        "qSubNodes": Array [
          Object {
            "qElemNo": 0,
            "qSubNodes": Array [
              Object {
                "qElemNo": 0,
                "qSubNodes": Array [],
                "qType": "E",
              },
            ],
            "qType": "N",
          },
          Object {
            "qElemNo": 1,
            "qSubNodes": Array [
              Object {
                "qElemNo": 0,
                "qSubNodes": Array [],
                "qType": "N",
              },
              Object {
                "qElemNo": 1,
                "qSubNodes": Array [],
                "qType": "N",
              },
            ],
            "qType": "N",
          },
        ],
        "qType": "N",
        "x": 2,
        "y": 0,
      },
      "qElemNo": 1,
      "qSubNodes": Array [
        Object {
          "qElemNo": 0,
          "qSubNodes": Array [],
          "qType": "N",
        },
        Object {
          "qElemNo": 1,
          "qSubNodes": Array [],
          "qType": "N",
        },
      ],
      "qType": "N",
      "x": 3,
      "y": 1,
    },
  ],
  Array [
    Object {
      "parent": Object {
        "parent": Object {
          "parent": null,
          "qElemNo": 0,
          "qSubNodes": Array [
            Object {
              "qElemNo": 0,
              "qSubNodes": Array [
                Object {
                  "qElemNo": 0,
                  "qSubNodes": Array [],
                  "qType": "E",
                },
              ],
              "qType": "E",
            },
          ],
          "qType": "N",
          "x": 0,
          "y": 0,
        },
        "qElemNo": 0,
        "qSubNodes": Array [
          Object {
            "qElemNo": 0,
            "qSubNodes": Array [],
            "qType": "E",
          },
        ],
        "qType": "E",
        "x": 0,
        "y": 1,
      },
      "qElemNo": 0,
      "qSubNodes": Array [],
      "qType": "E",
      "x": 0,
      "y": 2,
    },
    Object {
      "parent": Object {
        "parent": Object {
          "parent": null,
          "qElemNo": 1,
          "qSubNodes": Array [
            Object {
              "qElemNo": 0,
              "qSubNodes": Array [
                Object {
                  "qElemNo": 0,
                  "qSubNodes": Array [],
                  "qType": "E",
                },
              ],
              "qType": "E",
            },
          ],
          "qType": "N",
          "x": 1,
          "y": 0,
        },
        "qElemNo": 0,
        "qSubNodes": Array [
          Object {
            "qElemNo": 0,
            "qSubNodes": Array [],
            "qType": "E",
          },
        ],
        "qType": "E",
        "x": 1,
        "y": 1,
      },
      "qElemNo": 0,
      "qSubNodes": Array [],
      "qType": "E",
      "x": 1,
      "y": 2,
    },
    Object {
      "parent": Object {
        "parent": Object {
          "parent": null,
          "qElemNo": 2,
          "qSubNodes": Array [
            Object {
              "qElemNo": 0,
              "qSubNodes": Array [
                Object {
                  "qElemNo": 0,
                  "qSubNodes": Array [],
                  "qType": "E",
                },
              ],
              "qType": "N",
            },
            Object {
              "qElemNo": 1,
              "qSubNodes": Array [
                Object {
                  "qElemNo": 0,
                  "qSubNodes": Array [],
                  "qType": "N",
                },
                Object {
                  "qElemNo": 1,
                  "qSubNodes": Array [],
                  "qType": "N",
                },
              ],
              "qType": "N",
            },
          ],
          "qType": "N",
          "x": 2,
          "y": 0,
        },
        "qElemNo": 0,
        "qSubNodes": Array [
          Object {
            "qElemNo": 0,
            "qSubNodes": Array [],
            "qType": "E",
          },
        ],
        "qType": "N",
        "x": 2,
        "y": 1,
      },
      "qElemNo": 0,
      "qSubNodes": Array [],
      "qType": "E",
      "x": 2,
      "y": 2,
    },
    Object {
      "parent": Object {
        "parent": Object {
          "parent": null,
          "qElemNo": 2,
          "qSubNodes": Array [
            Object {
              "qElemNo": 0,
              "qSubNodes": Array [
                Object {
                  "qElemNo": 0,
                  "qSubNodes": Array [],
                  "qType": "E",
                },
              ],
              "qType": "N",
            },
            Object {
              "qElemNo": 1,
              "qSubNodes": Array [
                Object {
                  "qElemNo": 0,
                  "qSubNodes": Array [],
                  "qType": "N",
                },
                Object {
                  "qElemNo": 1,
                  "qSubNodes": Array [],
                  "qType": "N",
                },
              ],
              "qType": "N",
            },
          ],
          "qType": "N",
          "x": 2,
          "y": 0,
        },
        "qElemNo": 1,
        "qSubNodes": Array [
          Object {
            "qElemNo": 0,
            "qSubNodes": Array [],
            "qType": "N",
          },
          Object {
            "qElemNo": 1,
            "qSubNodes": Array [],
            "qType": "N",
          },
        ],
        "qType": "N",
        "x": 3,
        "y": 1,
      },
      "qElemNo": 0,
      "qSubNodes": Array [],
      "qType": "N",
      "x": 3,
      "y": 2,
    },
    Object {
      "parent": Object {
        "parent": Object {
          "parent": null,
          "qElemNo": 2,
          "qSubNodes": Array [
            Object {
              "qElemNo": 0,
              "qSubNodes": Array [
                Object {
                  "qElemNo": 0,
                  "qSubNodes": Array [],
                  "qType": "E",
                },
              ],
              "qType": "N",
            },
            Object {
              "qElemNo": 1,
              "qSubNodes": Array [
                Object {
                  "qElemNo": 0,
                  "qSubNodes": Array [],
                  "qType": "N",
                },
                Object {
                  "qElemNo": 1,
                  "qSubNodes": Array [],
                  "qType": "N",
                },
              ],
              "qType": "N",
            },
          ],
          "qType": "N",
          "x": 2,
          "y": 0,
        },
        "qElemNo": 1,
        "qSubNodes": Array [
          Object {
            "qElemNo": 0,
            "qSubNodes": Array [],
            "qType": "N",
          },
          Object {
            "qElemNo": 1,
            "qSubNodes": Array [],
            "qType": "N",
          },
        ],
        "qType": "N",
        "x": 3,
        "y": 1,
      },
      "qElemNo": 1,
      "qSubNodes": Array [],
      "qType": "N",
      "x": 4,
      "y": 2,
    },
  ],
]
`;

exports[`extractTop should extract top data with first node expanded 1`] = `
Array [
  Array [
    Object {
      "parent": null,
      "qCanCollapse": true,
      "qElemNo": 0,
      "qSubNodes": Array [
        Object {
          "qElemNo": 0,
          "qSubNodes": Array [],
          "qType": "N",
        },
        Object {
          "qElemNo": 1,
          "qSubNodes": Array [],
          "qType": "N",
        },
      ],
      "qType": "N",
      "x": 0,
      "y": 0,
    },
    Object {
      "parent": null,
      "qElemNo": 1,
      "qSubNodes": Array [],
      "qType": "N",
      "x": 2,
      "y": 0,
    },
    Object {
      "parent": null,
      "qElemNo": 2,
      "qSubNodes": Array [],
      "qType": "N",
      "x": 3,
      "y": 0,
    },
  ],
  Array [
    Object {
      "parent": Object {
        "parent": null,
        "qCanCollapse": true,
        "qElemNo": 0,
        "qSubNodes": Array [
          Object {
            "qElemNo": 0,
            "qSubNodes": Array [],
            "qType": "N",
          },
          Object {
            "qElemNo": 1,
            "qSubNodes": Array [],
            "qType": "N",
          },
        ],
        "qType": "N",
        "x": 0,
        "y": 0,
      },
      "qElemNo": 0,
      "qSubNodes": Array [],
      "qType": "N",
      "x": 0,
      "y": 1,
    },
    Object {
      "parent": Object {
        "parent": null,
        "qCanCollapse": true,
        "qElemNo": 0,
        "qSubNodes": Array [
          Object {
            "qElemNo": 0,
            "qSubNodes": Array [],
            "qType": "N",
          },
          Object {
            "qElemNo": 1,
            "qSubNodes": Array [],
            "qType": "N",
          },
        ],
        "qType": "N",
        "x": 0,
        "y": 0,
      },
      "qElemNo": 1,
      "qSubNodes": Array [],
      "qType": "N",
      "x": 1,
      "y": 1,
    },
  ],
]
`;

exports[`extractTop should extract top data with no nodes expanded 1`] = `
Array [
  Array [
    Object {
      "parent": null,
      "qElemNo": 0,
      "qSubNodes": Array [],
      "qType": "N",
      "x": 0,
      "y": 0,
    },
    Object {
      "parent": null,
      "qElemNo": 1,
      "qSubNodes": Array [],
      "qType": "N",
      "x": 1,
      "y": 0,
    },
    Object {
      "parent": null,
      "qElemNo": 2,
      "qSubNodes": Array [],
      "qType": "N",
      "x": 2,
      "y": 0,
    },
  ],
]
`;
